--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
-@font-face {
-  font-family: "DOSVGA";
-  src: url("./assets/FontsFree-Net-Perfect-DOS-VGA-437.ttf") format("truetype");
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 body {
   margin: 0;
@@ -10,11 +9,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
 
 * {
